--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> f87e14a (first commit)
->>>>>>> 38e84bd (first commit)
 # See https://www.dartlang.org/guides/libraries/private-files
 
 # Files and directories created by pub
@@ -19,7 +12,7 @@ pubspec.lock
 doc/api/
 
 # dotenv environment variables file
-.env*
+#.env*
 
 # Avoid committing generated Javascript files:
 *.dart.js
@@ -32,11 +25,7 @@ doc/api/
 
 .flutter-plugins
 .flutter-plugins-dependencies
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-=======
+
 # See https://www.dartlang.org/guides/libraries/private-files
 
 # Files and directories created by pub
@@ -51,7 +40,7 @@ pubspec.lock
 doc/api/
 
 # dotenv environment variables file
-.env*
+#.env*
 
 # Avoid committing generated Javascript files:
 *.dart.js
@@ -108,6 +97,3 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
->>>>>>> f5db933 (first commit)
->>>>>>> f87e14a (first commit)
->>>>>>> 38e84bd (first commit)
