--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
 APP_ENV=dev
 API_BASE_URL=http://192.168.1.106:8080/api/v1
-SENTRY_DSN=
-GOOGLE_API_KEY=
+SENTRY_DSN=https://2050753ad5acbb26ef69fb1a4cd4a45c@o4507610774241280.ingest.us.sentry.io/4507724043321344
+GOOGLE_API_KEY=AIzaSyBornA7--RfRWMDzXy7BvLM7fv72GNxTs4
 SOCKET_URL=ws://192.168.1.106:8080/ws
 DB_NAME=demo
 UPDATE_URL=
